<resources>
    <!--<string name="app_name">Fototechparivar</string>-->
    <string name="app_name">Parivar Biz</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="home">Home</string>
    <string name="alerts">Alerts</string>
    <string name="help">Help</string>
    <string name="my_account">My Account</string>
    <string name="new_bill">New bill</string>
    <string name="view_bill">View bill</string>
    <string name="leads">Leads</string>
    <string name="reports">Reports</string>
    <string name="album_leads">Album Leads</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_desc">Enter your mobile number to update password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="member_login">Member Login</string>
    <string name="login_desc">Please enter below details to login</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_passwords">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="membership_card_details">Membership Card details</string>
    <string name="parivar_card_details">Parivar Card details</string>
    <string name="select_user">Select user</string>
    <string name="invoice_number">Invoice Number</string>
    <string name="store_bill_number">Store Bill Number</string>
    <string name="enter_store_bill_number">Enter Store Bill Number</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="enter_coupon_code">Enter coupon code</string>
    <string name="sales_details">Sales Details</string>
    <string name="enter_Sales_details">Enter Sales Details</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="amount">Amount</string>
    <string name="enter_bill_amount">Enter bill amount</string>
    <string name="place_booking_leads">Place booking Leads</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="generate">Generate</string>
    <string name="request_form">Request Form</string>
    <string name="business_ame">Business Name*</string>
    <string name="enter_business_name">Enter Business Name</string>
    <string name="your_name">Your Name*</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="email_id">Email Id*</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="mobile_numbers">Mobile Number*</string>
    <string name="city">City*</string>
    <string name="enter_your_city">Enter your City</string>
    <string name="reset_password">Reset Password</string>
    <string name="service_export_leads">Service Expert Leads</string>
    <string name="store_leads">Store Leads</string>
    <string name="no_store_leads_found">No Store Leads Found</string>
    <string name="no_place_leads_found">No Place Leads Found</string>
    <string name="no_album_leads_found">No Album Leads Found</string>
    <string name="no_service_leads_found">No Service Expert Leads Found</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="verify_otp_desc">Enter the OTP to verify and update your password\n We have sent the OTP on +91</string>
    <string name="enter_manually">Enter Manually</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="order_no">Order No</string>
    <string name="approx_sheets">Approx. Sheets</string>
    <string name="customer_details">Customer details</string>
    <string name="no_of_albums">No.of Albums</string>
    <string name="status">Status</string>
    <string name="message">Message</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="enter_invoice_number">Enter Invoice Number</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="complete_album_lead">Complete Album Lead</string>
    <string name="complete_service_lead">Complete Service Lead</string>
    <string name="enquiry_details">Enquiry details</string>
    <string name="lead_details">Lead Details</string>
    <string name="client_details">Client Details</string>
    <string name="rating">Rating</string>
    <string name="logout">Logout</string>
    <string name="phone">Phone</string>
    <string name="tracking_id">Tracking ID</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="please_enter_your_old_password">Please Enter Your Old Password</string>
    <string name="please_enter_your_new_password">Please Enter Your New Password</string>
    <string name="please_enter_your_password">Please Enter Your Password</string>
    <string name="please_enter_your_confirm_password">Please Enter Your Confirm Password</string>
    <string name="please_enter_your_mobile_number">Please Enter Your Mobile Number</string>
    <string name="please_enter_your_valid_mobile_number">Please Enter Your Valid Mobile Number</string>
    <string name="please_enter_your_valid_email_address">Please Enter Your Valid Email Address</string>

    <string name="not_valid_mobile_number">Not Valid Mobile Number</string>
    <string name="please_enter_sale_service_details">Please Enter sale service details</string>
    <string name="please_enter_bill_amount">Please Enter Bill Amount</string>
    <string name="please_enter_your_city">Please Enter Your City</string>
    <string name="please_enter_your_Name">Please Enter Your Name</string>
    <string name="please_enter_your_Business_Name">Please Enter Your Business Name</string>
    <string name="please_enter_your_email_id">Please Enter Your Email ID</string>
    <string name="please_enter_your_otp">Please Enter Your OTP</string>
    <string name="wrong_otp">Wrong OTP</string>
    <string name="password_not_match">Password not matched</string>
    <string name="expert_leads">Expert Leads</string>
    <string name="location_leads">Location Leads</string>
    <string name="please_select_user">Please Select user</string>
    <string name="please_select_first_user">Please Select the user</string>
    <string name="New">New</string>
    <string name="accepted">Accepted</string>
    <string name="cancel">Cancel</string>
    <string name="complete">Complete</string>
    <string name="rejected">Rejected</string>
    <string name="cancelled">Cancelled</string>
    <string name="completed">Completed</string>

</resources>