<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical"
    tools:context=".activity.NewBillActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_28sdp"
            android:layout_height="@dimen/_28sdp"
            android:id="@+id/back"
            android:padding="@dimen/_4sdp"
            android:src="@drawable/ic_arrow"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:text="New Bill"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/_20sdp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/membership_card_details"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_drop_down"
            android:layout_marginTop="10dp"
            android:padding="12dp"
            android:background="@drawable/rounded_corner_service"
            android:textSize="14sp"
            android:textColor="#848484"
            android:textColorHint="#848484"
            android:hint="@string/select_user" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/invoice_number"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/et_invoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#848484"
            android:textColorHint="#848484"
            android:layout_marginTop="10dp"
            android:padding="12dp"
            android:background="@drawable/rounded_corner_service"
             />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/store_bill_number"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_store_bill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="12dp"
            android:textSize="14sp"
            android:textColor="#848484"
            android:textColorHint="#848484"
            android:background="@drawable/rounded_corner_service"
            android:hint="@string/enter_store_bill_number"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coupon_code"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="15sp" />


        <EditText
            android:id="@+id/et_coupon_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="12dp"
            android:textSize="14sp"
            android:textColor="#848484"
            android:textColorHint="#848484"
            android:background="@drawable/rounded_corner_service"
            android:hint="@string/enter_coupon_code" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sales_details"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_sales_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="12dp"
            android:textSize="14sp"
            android:textColor="#848484"
            android:textColorHint="#848484"
            android:background="@drawable/rounded_corner_service"
            android:hint="@string/enter_Sales_details"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bill_amount"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_bill_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#848484"
            android:textColorHint="#848484"
            android:layout_marginTop="10dp"
            android:padding="12dp"
            android:background="@drawable/rounded_corner_service"
            android:hint="Enter bill amount"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/submit"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:background="#231F20"
            android:textSize="@dimen/_15sdp" />

    </LinearLayout>

</LinearLayout>